force-app/main/default/objects/OrderItem/fields/Applied__c.field-meta.xml
<CustomField>
    <fullName>Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applied</label>
    <type>Checkbox</type>
</CustomField>