force-app/main/default/objects/OrderItem/fields/Count_Detail_Job__c.field-meta.xml
<CustomField>
    <fullName>Count_Detail_Job__c</fullName>
    <formula>IF( Service_Type__c  = &apos;Detailing&apos; , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Detail Job</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>