force-app/main/default/objects/OrderItem/fields/Count_Repair_Job__c.field-meta.xml
<CustomField>
    <fullName>Count_Repair_Job__c</fullName>
    <formula>IF( Service_Type__c = &apos;Repair&apos;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Repair Job</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>