force-app/main/default/objects/OrderItem/fields/Created_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Created_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created Transaction</label>
    <type>Checkbox</type>
</CustomField>