force-app/main/default/objects/OrderItem/fields/Default_Discount__c.field-meta.xml
<CustomField>
    <fullName>Default_Discount__c</fullName>
    <label>Default Discount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>