force-app/main/default/objects/OrderItem/fields/Discount_Amount_PCA__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_PCA__c</fullName>
    <formula>CASE( Order.RecordType.Name 
,&quot;Sales PCA Order&quot;
,IF( Discount__c  &gt; 0  
    &amp;&amp; ISBLANK( Order.Promotion_Item__c ) = FALSE 
    &amp;&amp; Order.Promotion_Item__r.Promotion__r.RecordType.DeveloperName = &apos;Standard&apos; 

    ,ListPrice  *   Discount__c * Quantity 
    ,0)
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Amount (PCA)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>