force-app/main/default/objects/OrderItem/fields/Einvoice__c.field-meta.xml
<CustomField>
    <fullName>Einvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Einvoice</label>
    <referenceTo>Einvoice__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>