force-app/main/default/objects/OrderItem/fields/Generated_Redeem__c.field-meta.xml
<CustomField>
    <fullName>Generated_Redeem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generated Redeem</label>
    <type>Checkbox</type>
</CustomField>