force-app/main/default/objects/OrderItem/fields/GUID_DMS__c.field-meta.xml
<CustomField>
    <fullName>GUID_DMS__c</fullName>
    <label>GUID DMS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>