force-app/main/default/objects/OrderItem/fields/Installtion__c.field-meta.xml
<CustomField>
    <fullName>Installtion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installation</label>
    <type>Checkbox</type>
</CustomField>