force-app/main/default/objects/OrderItem/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <formula>Einvoice__r.Invoice_No__c</formula>
    <label>Invoice No</label>
    <type>Text</type>
</CustomField>