force-app/main/default/objects/OrderItem/fields/Is_Calculate_Stock__c.field-meta.xml
<CustomField>
    <fullName>Is_Calculate_Stock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Calculate Stock</label>
    <type>Checkbox</type>
</CustomField>