force-app/main/default/objects/OrderItem/fields/IsSum__c.field-meta.xml
<CustomField>
    <fullName>IsSum__c</fullName>
    <label>IsSum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>