force-app/main/default/objects/OrderItem/fields/KPI_Amount__c.field-meta.xml
<CustomField>
    <fullName>KPI_Amount__c</fullName>
    <formula>IF( Product2.RecordType.Name =&apos;Service Jobs&apos;,ListPrice/ Origin_Labour_Hour__c * Labour_Hours__c * Quantity ,ListPrice *  Quantity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPI Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>