force-app/main/default/objects/OrderItem/fields/Labour_Hours__c.field-meta.xml
<CustomField>
    <fullName>Labour_Hours__c</fullName>
    <label>Sold Hours</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>