force-app/main/default/objects/OrderItem/fields/Motorcycle_Situation__c.field-meta.xml
<CustomField>
    <fullName>Motorcycle_Situation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Motorcycle Situation</label>
    <referenceTo>MotorcycleSituation__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>