force-app/main/default/objects/OrderItem/fields/Origin_Labour_Hour__c.field-meta.xml
<CustomField>
    <fullName>Origin_Labour_Hour__c</fullName>
    <formula>Product2.Labor_HOUR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Labour Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>