force-app/main/default/objects/OrderItem/fields/Package_Owner__c.field-meta.xml
<CustomField>
    <fullName>Package_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package Owner</label>
    <referenceTo>Package_Owner__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>