force-app/main/default/objects/OrderItem/fields/PackageOwnerId__c.field-meta.xml
<CustomField>
    <fullName>PackageOwnerId__c</fullName>
    <label>PackageOwnerId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>