force-app/main/default/objects/OrderItem/fields/Part_ID__c.field-meta.xml
<CustomField>
    <fullName>Part_ID__c</fullName>
    <formula>Product2.PartID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part ID</label>
    <type>Text</type>
</CustomField>