force-app/main/default/objects/OrderItem/fields/Percent__c.field-meta.xml
<CustomField>
    <fullName>Percent__c</fullName>
    <formula>Order.Asset__r.Promotion__r.Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>