force-app/main/default/objects/OrderItem/fields/Price_After_VAT__c.field-meta.xml
<CustomField>
    <fullName>Price_After_VAT__c</fullName>
    <description>Manual giá sau thuế - PO</description>
    <label>Price After VAT</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>