force-app/main/default/objects/OrderItem/fields/ProdName__c.field-meta.xml
<CustomField>
    <fullName>ProdName__c</fullName>
    <label>ProdName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>