force-app/main/default/objects/OrderItem/fields/Prodprice2__c.field-meta.xml
<CustomField>
    <fullName>Prodprice2__c</fullName>
    <formula>Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prodprice2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>