force-app/main/default/objects/OrderItem/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <type>TextArea</type>
</CustomField>