force-app/main/default/objects/OrderItem/fields/Product_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Record_Type__c</fullName>
    <formula>Product2.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Record Type</label>
    <type>Text</type>
</CustomField>