force-app/main/default/objects/OrderItem/fields/Profomar_Order__c.field-meta.xml
<CustomField>
    <fullName>Profomar_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profomar Order</label>
    <type>Checkbox</type>
</CustomField>