force-app/main/default/objects/OrderItem/fields/Profomar_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Profomar_Order_Number__c</fullName>
    <label>Profomar Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>