force-app/main/default/objects/OrderItem/fields/Promotion_Product__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion Product</label>
    <referenceTo>Promotion_Product__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>