force-app/main/default/objects/OrderItem/fields/QoH__c.field-meta.xml
<CustomField>
    <fullName>QoH__c</fullName>
    <label>QoH</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>