force-app/main/default/objects/OrderItem/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <formula>IF(Product2.RecordType.Name = &apos;Bike&apos;,&apos;Xe máy&apos;,  IF( Product2.RecordType.Name = &apos;PCA&apos;, &apos;Phụ tùng - Phụ kiện&apos;,&apos;Dịch vụ&apos; ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>