force-app/main/default/objects/OrderItem/fields/Sales_Staff__c.field-meta.xml
<CustomField>
    <fullName>Sales_Staff__c</fullName>
    <formula>IF(   ISBLANK(Order.Sale_Owner__c) ,  Order.Owner:User.Contact.LastName ,  Order.Sale_Owner__r.Contact.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Staff</label>
    <type>Text</type>
</CustomField>