force-app/main/default/objects/OrderItem/fields/Service_Type_Product__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_Product__c</fullName>
    <formula>TEXT(Product2.Service_Type__c)</formula>
    <label>Service Type Product</label>
    <type>Text</type>
</CustomField>