force-app/main/default/objects/OrderItem/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>This pick list have 2 status:
Delivered: This item has delivered to the customer.
Need to Order; This item needs to order.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Need Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>