force-app/main/default/objects/OrderItem/fields/STT__c.field-meta.xml
<CustomField>
    <fullName>STT__c</fullName>
    <label>STT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>