force-app/main/default/objects/OrderItem/fields/Symptom_Code__c.field-meta.xml
<CustomField>
    <fullName>Symptom_Code__c</fullName>
    <formula>Motorcycle_Situation__r.Symptom__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Symptom Code</label>
    <type>Text</type>
</CustomField>