force-app/main/default/objects/OrderItem/fields/Symptom_Condition__c.field-meta.xml
<CustomField>
    <fullName>Symptom_Condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Symptom/Condition</label>
    <referenceTo>Symptom_Condition__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>