force-app/main/default/objects/OrderItem/fields/Total_Amount_Line__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Line__c</fullName>
    <formula>ListPrice *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Line</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>