force-app/main/default/objects/OrderItem/fields/varTotal__c.field-meta.xml
<CustomField>
    <fullName>varTotal__c</fullName>
    <formula>UnitPrice *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>varTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>