force-app/main/default/objects/OrderItem/fields/VAT_PO__c.field-meta.xml
<CustomField>
    <fullName>VAT_PO__c</fullName>
    <label>VAT (PO)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>