force-app/main/default/objects/OrderItem/validationRules/Order_Is_Used.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Is_Used</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE(Is_Used__c) == true &amp;&amp; NOT(ISNEW())</errorConditionFormula>
    <errorMessage>The Order was used so you can not edit it.</errorMessage>
</ValidationRule>